# mcman

./: .gitignore  Cargo.toml  README.md  mcman.sh
src/: args.rs  error.rs  main.rs
src/operations/: create.rs
