[package]
name = "mcman-rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
reqwest = { version = "0.11.15", features = ["blocking"] }
serde_json = "1.0.94"
